# Figby

./: .gitignore  .gitmodules  .travis.yml  5.0-manual-testing-notes.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  handoff.md  run-tests.sh  snapcraft.yaml
.github/workflows/: ci.yml
assets/fonts/converted/: DejaVuSansMono.flf  Fattern.flf
assets/img/: figby.block.ascii.image.txt  figby.slight.ascii.image.txt
assets/templates/: figby-30w.ftm  figby-30w.ftmp  figby-dos-rebel.txt
assets/tui/: icons.yaml
assets/tui/themes/: default.yaml
c-figlet/: chkfont
docs/: 4.0-manual-testing-notes.md  animation-audit.md  codebase-audit-2026-06-18.md  e2e-test-checklist.md  learnings.md  lighting-design.md  manual-testing-v7.md  memory-v1.md  memory-v2.md  memory-v3.md  memory-v5.md  memory.md  particles-design.md  ralph-log.md  sonnet5-review.md  todo-v1.md  todo-v2.md  todo-v3.md  todo-v4.md  todo-v5.md  todo-v6.md  todo-v7.md  todo-v8.md  todo.md  tui-arch-audit.md
examples/: FIGLET_EXAMPLES.md
feiglet-rs/: Cargo.toml
feiglet-rs/src/: control.rs  font.rs  input.rs  lib.rs  main.rs  render.rs  smush.rs
figby-rs/: Cargo.toml
figby-rs/benches/: render_bench.rs
figby-rs/src/: config.rs  control.rs  font.rs  font_gen.rs  gif_import.rs  image_input.rs  lib.rs  main.rs  output.rs  palette_import.rs  render.rs  template.rs  tui.rs  web.rs
figby-rs/src/tui/: action.rs  app_state.rs  brush.rs  canvas.rs  component.rs  dispatch.rs  event_loop.rs  events.rs  export.rs  file_ops.rs  font_editor.rs  fx.rs  image_editor.rs  keymap.rs  layers.rs  layout.rs  light_panel.rs  lighting.rs  menu.rs  mod.rs  overlays.rs  palette.rs  palette_editor.rs  particles.rs  player.rs  props_panel.rs  render_mode.rs  side_panel.rs  status.rs  theme.rs  throbber.rs  timeline.rs  toolbox.rs  undo.rs  undo_panel.rs  welcome.rs
figby-rs/src/tui/components/: canvas.rs  export.rs  file_ops.rs  font_editor.rs  image_editor.rs  mod.rs  palette.rs  status_bar.rs  toolbox.rs  undo_panel.rs
figby-rs/src/tui/dialogs/: font_import_options.rs  gif_import.rs  mod.rs  new_image.rs  rascii_import.rs  system_font.rs
figby-rs/src/tui/tools/: brush.rs  eraser.rs  eyedropper.rs  fill.rs  line.rs  mod.rs  move_tool.rs  rotate_tool.rs  selection.rs  spray.rs  text.rs
figby-rs/tests/: fuzz.rs  regression_export.rs  regression_image.rs  regression_tui.rs  run_tests.rs  tui.rs
scripts/: make-examples.sh  ralph-monitor.sh  ralph.sh  regenerate-expected.sh
skills/: ralph.md
tests/: res021.txt  res023.txt  res026.txt  res032.txt  res035.txt  res036.txt  res037.txt  res038.txt  res040.txt  res041.txt  res045.txt  res046.txt  res047.txt  res048.txt  res049.txt  res050.txt  res051.txt  res052.txt  res053.txt  res054.txt  res055.txt  res057.txt  res058.txt  res059.txt  res061.txt  res062.txt  res064.txt  res065.txt
