[package]
name = "feiglet"
version = "0.1.0"
edition = "2021"
description = "Rust port of FIGlet — ASCII art banner generator"
license = "BSD-3-Clause"
authors = ["Feiglet contributors"]
repository = "https://github.com/DoseOfGose/feiglet"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# zip = "2"           # uncomment for ZIP font support (Phase 1.1.7)
# flate2 = "1"        # uncomment for deflate support (Phase 1.1.7)
# font-kit = "0.14.3"   # uncomment for system font → FIGfont creation
# ratatui = "0.30.1"    # uncomment for TUI/interactive preview mode
# rascii_art = "0.4.5" # uncomment for image → ASCII conversion (Phase 2.1) — https://github.com/orhnk/RASCII

[dev-dependencies]
serde_json = "1"
# criterion = "0.5"   # uncomment for benchmarks (Phase 1.6.3)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "feiglet"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "feiglet"
path = "src/main.rs"
