[package]
name = "figby"
version = "0.1.0"
edition = "2021"
description = "Rust port of FIGlet — ASCII art banner generator"
license = "BSD-3-Clause"
authors = ["Figby contributors"]
repository = "https://github.com/DoseOfGose/figby"

[dependencies]
clap = { version = "4", features = ["derive"] }
termion = "4"
serde = { version = "1", features = ["derive"] }
zip = "2"
flate2 = "1"
rascii_art = "0.4.5"
# font-kit = "0.14.3"   # uncomment for system font → FIGfont creation
# ratatui = "0.30.1"    # uncomment for TUI/interactive preview mode
# rascii_art = "0.4.5" # uncomment for image → ASCII conversion (Phase 2.1) — https://github.com/orhnk/RASCII

[dev-dependencies]
serde_json = "1"
tempfile = "3"
proptest = "1"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "figby"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "figby"
path = "src/main.rs"

[[bench]]
name = "render_bench"
harness = false
