[package]
name = "figby"
version = "2.5.2"
edition = "2021"
description = "FIGlet deluxe: drop in rust replacement but with more time-wasting toys"
license = "BSD-3-Clause"
authors = ["Figby contributors"]
repository = "https://github.com/DoseOfGose/figby"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
zip = "2"
flate2 = "1"
rascii_art = "0.4.5"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "webp"] }
toml = "0.8"
font-kit = "0.14.3"   # system font → FIGfont creation
pathfinder_geometry = "0.5"
ratatui = "0.30.1"
crossterm = "0.28"
serde_yaml = "0.9"
rand = "0.8"
gif = "0.13"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
proptest = "1"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "figby"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "figby"
path = "src/main.rs"

[[bench]]
name = "render_bench"
harness = false
