[package]
name = "figby"
version = "5.2.0"
edition = "2021"
description = "FIGlet deluxe: drop in rust replacement but with more time-wasting toys"
license = "BSD-3-Clause"
authors = ["Figby contributors"]
repository = "https://github.com/DoseOfGose/figby"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
image = { version = "0.24", features = ["jpeg", "png", "bmp", "webp"] }
toml = "0.8"
serde_yaml = "0.9"
gif = "0.13"
png = "0.18"
rascii_art = "0.4.5"
unicode-width = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.30.1", features = ["crossterm"] }
crossterm = "0.28"
font-kit = "0.14.3"
pathfinder_geometry = "0.5"
tachyonfx = { version = "0.25", features = ["std-duration"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.30.1", default-features = false }
ratzilla = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
proptest = "1"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "figby"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "figby"
path = "src/main.rs"

[[bench]]
name = "render_bench"
harness = false
